# 42_Master

./: .gitignore  .gitmodules  README.md  signature.txt
CC/Rank 0/C-piscine-reloaded/: ft_range.c
CC/Rank 0/LibFT/: .ft_isalpha.c.swp  .libft.h.swp  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  (+16 more)
Rank 0/: README.md
Rank 0/LibFT/: Makefile  README.md  ft_atoi.c  ft_calloc.c  ft_split.c  ft_strlen.c  ft_strmapi.c  libft.h
Rank 1/: .gitattributes  .gitignore  README.md
Rank 1/Born2beRoot/: README.md  b2br_test.sh
Rank 1/born2beroot/: signatura.txt
Rank 1/ft_printf/: Makefile  README.md  WARP.md  ft_formats.c  ft_parse_mods.c  ft_print_char.c  ft_print_str.c  ft_printf.c  ft_printf.h  ft_printf_utils.c  ft_printf_utils2.c  ft_printhex.c  ft_printptr.c  ft_putchar.c  ft_puthex.c  ft_puthexmaj.c  ft_putnbr.c  ft_putptr.c  ft_putstr.c  ft_putu.c  ft_putund.c  main.c  printf.h
Rank 1/get_nex_line/: Makefile  get_next_line.c  get_next_line_utils.c  main.c  test.txt
Rank 1/printf/: ft_printf.h
Rank 2/Push_swap/: Makefile  chunks.c  costs.c  indexing.c  parse.c  positions.c  push.c  push_swap.h  push_to_b.c  rev_rotate.c  rotate.c  sort_small.c  sort_stack.c  swap.c  utils.c
Rank 2/Python/PY08/ex1/: loading.py  pyproject.toml  requirements.txt
Rank 2/pipex/: Makefile  main.c  pipex.c  pipex.h  pipex_utils.c  run_tests.sh
Rank 2/push_swap/: Makefile  README.md  const.c  push.c  push_swap.c  push_swap.h  push_swap_files.c  push_swap_utils.c  reverse_rotate.c  rotate.c  swap.c  test_push_swap.sh
push_swap/: Makefile
push_swap/src/: main.c
(+195 files in other folders)
